--- a/src/main/resources/templates/audiobookEditPage.html
+++ b/src/main/resources/templates/audiobookEditPage.html
@@ -29,20 +29,41 @@
 
     <form th:action="@{/audiobook/edit}" th:object="${audiobookInfo}" method="POST">
         <input type="hidden" required name="id" th:field="*{id}"><br>
-        <label for="genre">Жанр</label>
+        <label for="title">Название</label>
+        <input type="text"  required id="title" th:field="*{title}"><br>
+        <input type="hidden"  required id="picturePath" th:field="*{picturePath}">
+        <label for="authors">Создатели аудиокниги</label>
         <br>
+        <select id="authors" required multiple size="2"
+                th:field="*{audiobookCreators}">
+            <option th:each="creator : ${allCreators}" th:value="${creator.id}" >
+                <p th:text="${creator.title}"></p><p th:if="${creator.author}"> автор</p>
+                <p th:unless="${creator.author}"> исполнитель</p></option>
+        </select>
+        <br>
+        <label for="genre">Жанры</label>
         <br>
         <select id="genre" required multiple size="2"
                 th:field="*{audiobookGenres}">
             <option th:each="genre : ${allGenres}" th:value="${genre.id}"><p th:text="${genre.title}"></p></option>
         </select>
         <br>
-        <br>
-        <label for="title">Название</label>
-        <input type="text" pattern="^[A-Za-zА-Яа-я]+$" required id="title" th:field="*{title}"><br>
+        <select id="audiobookFile" required hidden
+                th:field="*{audiobookFile}">
+            <option th:value="*{audiobookFile.id}" selected>qwe</option>
+        </select>
+        <input type="hidden"  required id="distributed" th:field="*{distributed}">
+        <input type="hidden"  required id="rating" th:field="*{rating}">
         <label for="description">Описание</label>
-        <input type="text" pattern="^[A-Za-zА-Яа-я]+$" id="description" th:field="*{description}"><br>
-        <input type="submit"  value="Edit audiobook">
+        <input type="text"  id="description" th:field="*{description}"><br>
+        <select id="userId" required hidden
+                th:field="*{user}">
+            <option th:value="*{user.id}" selected>qwe</option>
+        </select>
+        <label for="title">Год издания</label>
+        <input type="text"  required id="publicYear" th:field="*{publicationYear}"><br>
+        <input type="hidden"  required id="addDate" th:field="*{addDate}">
+        <input type="submit"  value="Подтвердить редактирование">
     </form>
 
 </body>
