--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ru"
       xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
@@ -10,44 +10,50 @@
 
     <div th:replace="fragments/header :: header"/>
 
-    <div id="content" class="container">
+    <div id="content" class="container mt-4">
 
-        <div class="row" style="margin-top:20px">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <form th:action="@{/login}" method="post">
-                    <fieldset>
-                        <h1>Please Sign In</h1>
-
-                        <div th:if="${param.error}">
-                            <div class="alert alert-danger mb-2">
-                                Invalid username and password.
-                            </div>
-                        </div>
-                        <div th:if="${param.logout}">
-                            <div class="alert alert-info mb-2">
-                                You have been logged out.
-                            </div>
-                        </div>
-
-                        <div class="form-group mb-2">
-                            <input type="text" name="username" id="username" class="form-control input-lg"
-                                   placeholder="UserName" required="true" autofocus="true"/>
-                        </div>
-                        <div class="form-group mb-2">
-                            <input type="password" name="password" id="password" class="form-control input-lg"
-                                   placeholder="Password" required="true"/>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign In"/>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+        <div class="row justify-content-center" >
+            <div class="col-md-6 col-sm-8 mb-1">
+                <h1 style="text-align: center">Войдите в аккаунт</h1>
             </div>
         </div>
 
+        <form th:action="@{/login}" method="post">
+            <div class="row justify-content-center" th:if="${param.error}">
+                <div class="alert alert-danger mb-2 col-md-6 col-sm-8">
+                    Неверный никнейм или пароль.
+                </div>
+            </div>
+            <div class="row justify-content-center" th:if="${param.logout}">
+                <div class="alert alert-info mb-2 col-md-6 col-sm-8">
+                    Вы должны выйти из профиля.
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="form-group mb-2 col-md-6 col-sm-8">
+                    <label for="nickname" class="form-label">Никнейм</label>
+                    <input type="text" name="username" id="nickname" class="form-control"
+                           placeholder="Введите никнейм" required="true"/>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="form-group mb-2 col-md-6 col-sm-8">
+                    <label for="password" class="form-label">Пароль</label>
+                    <input type="password" name="password" id="password" class="form-control"
+                           placeholder="Введите пароль" required="true" />
+                </div>
+            </div>
+            <div class="row justify-content-center mt-2">
+                <div class= "col-md-2  col-sm-2" style="visibility: hidden">
+                    e
+                </div>
+                <input type="submit" class="col-md-2 col-sm-3 btn btn-lg btn-primary btn-block" value="Войти"/>
+                <div class= "col-md-2 col-sm-2" style="visibility: hidden">
+                    e
+                </div>
+            </div>
+
+        </form>
     </div>
 
     <div th:replace="fragments/footer :: footer"/>
